# quickerRAWGL

./: README.md  meson.build
.github/workflows/: make.yml
source/: RAWInstanceBase.hpp  inputParser.hpp  meson.build  playbackInstance.hpp  player.cpp  tester.cpp
source/new/: RAWGLInstance.hpp  RAWInstance.hpp  meson.build
source/new/core/: engine.cpp  engine.h  graphics.h  graphics_soft.cpp  main.cpp  mixer.cpp  resource.cpp  script.cpp  script.h  sfxplayer.cpp  systemstub.h  systemstub_dummy.cpp  systemstub_sdl.cpp  video.cpp
tests/: .gitignore  lvl01.sol  lvl01.test  meson.build
